examples/test/testpolicy14943.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14943
  namespace: namespace65
spec:
  podSelector:
    matchLabels:
      key8: value18
      key30: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value7
          key16: value1
          key12: value5
      podSelector:
        matchLabels:
          key13: value48
          key30: value23
          key1: value13
